CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(synack)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_C_FLAGS "-Wall")
SET(CMAKE_C_FLAGS_DEBUG "-O1 -g -ggdb -fno-inline")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wl,-s")

ADD_EXECUTABLE(synack leef.c main.c)

TARGET_LINK_LIBRARIES(synack)
